8-3/y.output
Terminals which are not used

   UNDEF


State 12 conflicts: 1 shift/reduce


Grammar

    0 $accept: list $end

    1 list: /* empty */
    2     | list '\n'
    3     | list asgn '\n'
    4     | list expr '\n'
    5     | list expr ';'
    6     | list error '\n'

    7 asgn: VAR '=' expr
    8     | CNST '=' expr

    9 tple: /* empty */
   10     | expr
   11     | tple ',' expr

   12 expr: NUMBER
   13     | VAR
   14     | CNST
   15     | asgn
   16     | BLTIN '(' tple ')'
   17     | '-' expr
   18     | '+' expr
   19     | expr '%' expr
   20     | expr '+' expr
   21     | expr '-' expr
   22     | expr '*' expr
   23     | expr '/' expr
   24     | '(' expr ')'
   25     | expr '^' expr


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 4 6
'%' (37) 19
'(' (40) 16 24
')' (41) 16 24
'*' (42) 22
'+' (43) 18 20
',' (44) 11
'-' (45) 17 21
'/' (47) 23
';' (59) 5
'=' (61) 7 8
'^' (94) 25
error (256) 6
NUMBER (258) 12
VAR (259) 7 13
BLTIN (260) 16
UNDEF (261)
CNST (262) 8 14
UNARYPLUS (263)
UNARYMINUS (264)


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
list (23)
    on left: 1 2 3 4 5 6, on right: 0 2 3 4 5 6
asgn (24)
    on left: 7 8, on right: 3 15
tple (25)
    on left: 9 10 11, on right: 11 16
expr (26)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25,
    on right: 4 5 7 8 10 11 17 18 19 20 21 22 23 24 25


state 0

    0 $accept: . list $end

    $default  reduce using rule 1 (list)

    list  go to state 1


state 1

    0 $accept: list . $end
    2 list: list . '\n'
    3     | list . asgn '\n'
    4     | list . expr '\n'
    5     | list . expr ';'
    6     | list . error '\n'

    $end    shift, and go to state 2
    error   shift, and go to state 3
    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '\n'    shift, and go to state 10
    '('     shift, and go to state 11

    asgn  go to state 12
    expr  go to state 13


state 2

    0 $accept: list $end .

    $default  accept


state 3

    6 list: list error . '\n'

    '\n'  shift, and go to state 14


state 4

   12 expr: NUMBER .

    $default  reduce using rule 12 (expr)


state 5

    7 asgn: VAR . '=' expr
   13 expr: VAR .

    '='  shift, and go to state 15

    $default  reduce using rule 13 (expr)


state 6

   16 expr: BLTIN . '(' tple ')'

    '('  shift, and go to state 16


state 7

    8 asgn: CNST . '=' expr
   14 expr: CNST .

    '='  shift, and go to state 17

    $default  reduce using rule 14 (expr)


state 8

   18 expr: '+' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 19


state 9

   17 expr: '-' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 20


state 10

    2 list: list '\n' .

    $default  reduce using rule 2 (list)


state 11

   24 expr: '(' . expr ')'

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 21


state 12

    3 list: list asgn . '\n'
   15 expr: asgn .

    '\n'  shift, and go to state 22

    '\n'      [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


state 13

    4 list: list expr . '\n'
    5     | list expr . ';'
   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '+'   shift, and go to state 23
    '-'   shift, and go to state 24
    '*'   shift, and go to state 25
    '/'   shift, and go to state 26
    '%'   shift, and go to state 27
    '^'   shift, and go to state 28
    '\n'  shift, and go to state 29
    ';'   shift, and go to state 30


state 14

    6 list: list error '\n' .

    $default  reduce using rule 6 (list)


state 15

    7 asgn: VAR '=' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 31


state 16

   16 expr: BLTIN '(' . tple ')'

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    $default  reduce using rule 9 (tple)

    asgn  go to state 18
    tple  go to state 32
    expr  go to state 33


state 17

    8 asgn: CNST '=' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 34


state 18

   15 expr: asgn .

    $default  reduce using rule 15 (expr)


state 19

   18 expr: '+' expr .
   19     | expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '^'  shift, and go to state 28

    $default  reduce using rule 18 (expr)


state 20

   17 expr: '-' expr .
   19     | expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '^'  shift, and go to state 28

    $default  reduce using rule 17 (expr)


state 21

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   24     | '(' expr . ')'
   25     | expr . '^' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28
    ')'  shift, and go to state 35


state 22

    3 list: list asgn '\n' .

    $default  reduce using rule 3 (list)


state 23

   20 expr: expr '+' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 36


state 24

   21 expr: expr '-' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 37


state 25

   22 expr: expr '*' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 38


state 26

   23 expr: expr '/' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 39


state 27

   19 expr: expr '%' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 40


state 28

   25 expr: expr '^' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 41


state 29

    4 list: list expr '\n' .

    $default  reduce using rule 4 (list)


state 30

    5 list: list expr ';' .

    $default  reduce using rule 5 (list)


state 31

    7 asgn: VAR '=' expr .
   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 7 (asgn)


state 32

   11 tple: tple . ',' expr
   16 expr: BLTIN '(' tple . ')'

    ','  shift, and go to state 42
    ')'  shift, and go to state 43


state 33

   10 tple: expr .
   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 10 (tple)


state 34

    8 asgn: CNST '=' expr .
   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 8 (asgn)


state 35

   24 expr: '(' expr ')' .

    $default  reduce using rule 24 (expr)


state 36

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   20     | expr '+' expr .
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 20 (expr)


state 37

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   21     | expr '-' expr .
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 21 (expr)


state 38

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   22     | expr '*' expr .
   23     | expr . '/' expr
   25     | expr . '^' expr

    '^'  shift, and go to state 28

    $default  reduce using rule 22 (expr)


state 39

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   23     | expr '/' expr .
   25     | expr . '^' expr

    '^'  shift, and go to state 28

    $default  reduce using rule 23 (expr)


state 40

   19 expr: expr . '%' expr
   19     | expr '%' expr .
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '^'  shift, and go to state 28

    $default  reduce using rule 19 (expr)


state 41

   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr
   25     | expr '^' expr .

    '^'  shift, and go to state 28

    $default  reduce using rule 25 (expr)


state 42

   11 tple: tple ',' . expr

    NUMBER  shift, and go to state 4
    VAR     shift, and go to state 5
    BLTIN   shift, and go to state 6
    CNST    shift, and go to state 7
    '+'     shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 11

    asgn  go to state 18
    expr  go to state 44


state 43

   16 expr: BLTIN '(' tple ')' .

    $default  reduce using rule 16 (expr)


state 44

   11 tple: tple ',' expr .
   19 expr: expr . '%' expr
   20     | expr . '+' expr
   21     | expr . '-' expr
   22     | expr . '*' expr
   23     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 23
    '-'  shift, and go to state 24
    '*'  shift, and go to state 25
    '/'  shift, and go to state 26
    '%'  shift, and go to state 27
    '^'  shift, and go to state 28

    $default  reduce using rule 11 (tple)
